# evictvc

./: .gitignore  CITATION.cff  LICENSE  README.md
paper/: evictvc.tex
python/: evictvc.py  kzg_vc.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
